{
    "name": "InputMoveScene",
    "maps": [
        {
            "name": "SceneCotrolMap",
            "id": "1bf1c08a-9cb0-4dc3-ae17-9e5e0db58ad8",
            "actions": [
                {
                    "name": "MoveToScene_1",
                    "type": "Value",
                    "id": "3601b8c3-3f10-41c7-afb0-13fbc4096f64",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveToScene_2",
                    "type": "Button",
                    "id": "a01b6a39-6779-49d4-8f28-9da533c45912",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveToScene_3",
                    "type": "Button",
                    "id": "42d97ef5-d5fc-4b00-a230-e33b208cf770",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveToScene_4",
                    "type": "Button",
                    "id": "84ac30be-99d5-4ba6-9d28-0f8daf92bc9f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveToScene_5",
                    "type": "Button",
                    "id": "8e655f18-95d6-49a1-93fa-82da02a5f716",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveToScene_6",
                    "type": "Button",
                    "id": "ca3c0b5c-26c9-411b-a9f3-509c58d9b408",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveToScene_7",
                    "type": "Button",
                    "id": "b13aa486-b713-490f-9664-3e1d06ded540",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveToScene_8",
                    "type": "Button",
                    "id": "95618d1f-f561-468b-bf13-0a28519fda31",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveToScene_9",
                    "type": "Button",
                    "id": "3aa0ac06-f190-414d-81b3-5ea781df9819",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveToScene_10",
                    "type": "Button",
                    "id": "e35c729d-7e45-4ff6-8bc2-07e785e2013f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveToScene_11",
                    "type": "Button",
                    "id": "a527ce4a-d235-4ea0-806c-5212c6c422bc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveToScene_14",
                    "type": "Button",
                    "id": "49f05c05-bd4c-425e-b3c2-cd2f49fa3fdb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "94f179af-a5f1-432f-a349-20b89784cbb1",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveToScene_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "347aaa2e-259f-4f71-af69-93502a2e3aca",
                    "path": "<Keyboard>/numpad1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveToScene_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a52aaba2-866c-45cc-807f-746a84ecf935",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveToScene_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4897f114-9c22-4b19-a745-9a0bd6e03992",
                    "path": "<Keyboard>/numpad2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveToScene_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70835f90-ef38-4e89-ae43-4e8f0e1f8e1d",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveToScene_3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "47e458eb-a260-4587-9b37-5362a15373ec",
                    "path": "<Keyboard>/numpad3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveToScene_3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c119efcd-a1ab-408a-a77b-df7d960c10ce",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveToScene_4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c548a278-e304-469a-995e-d9dc61b20abb",
                    "path": "<Keyboard>/numpad4",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveToScene_4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62caf665-0a7a-4e2d-8eca-ceb647b21be2",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveToScene_5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23005b17-9381-408a-a96a-13d34f848f7e",
                    "path": "<Keyboard>/numpad5",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveToScene_5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "901cd488-2076-4002-bedc-8d977082e330",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveToScene_6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "304afd90-9c98-4cd5-900d-d597e26a1307",
                    "path": "<Keyboard>/numpad6",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveToScene_6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb9fdd90-6141-489f-a797-4f5e8f44bf08",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveToScene_7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "687703ba-317c-472f-b6b8-ca54e4b41102",
                    "path": "<Keyboard>/numpad7",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveToScene_7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7dfcd35a-dbe4-4ec6-846c-23dbcf73f261",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveToScene_8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7437bdee-50d3-4ce5-9392-2e908fcba010",
                    "path": "<Keyboard>/numpad8",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveToScene_8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "259c89ac-427e-48eb-a920-60b891c64e2e",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveToScene_9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "167bb6e8-af04-4e3b-bf6a-dd5fec74ce04",
                    "path": "<Keyboard>/numpad9",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveToScene_9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98a30160-f1eb-4fb2-8941-067b152f4a72",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveToScene_10",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d25d0e4b-b1ba-47a7-ad15-7f2253272d66",
                    "path": "<Keyboard>/numpad0",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveToScene_10",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8565836f-93ea-4b2b-8d15-d1b7e2b858b9",
                    "path": "<Keyboard>/period",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveToScene_11",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5abcc3e0-5bdc-48ba-b7b0-c983d7b3fdd9",
                    "path": "<Keyboard>/numpadPeriod",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveToScene_11",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3cb1a368-ce7e-4b0e-a8cf-dcbd1b11563c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveToScene_14",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XR Cotroller",
            "bindingGroup": "XR Cotroller",
            "devices": [
                {
                    "devicePath": "<OculusTouchController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}